test/bad/stmt_double_bind.pa
def foo for a b {
    foo(a,b) <-> forall c, forall c, a = c
}

